better user page

--- a/infonomy_server/templates/home.html
+++ b/infonomy_server/templates/home.html
@@ -72,10 +72,8 @@ function updateAuthContent() {
                         <div class="form-group">
                             <label for="priority">Priority:</label>
                             <select name="priority" id="priority">
-                                <option value="0">Low</option>
-                                <option value="1">Medium</option>
-                                <option value="2">High</option>
-                                <option value="3">Urgent</option>
+                                <option value="0">Low (0)</option>
+                                <option value="1">High (1)</option>
                             </select>
                         </div>
                     </div>
