--- a/infonomy_server/templates/home.html
+++ b/infonomy_server/templates/home.html
@@ -45,7 +45,7 @@
 // Update auth content based on login status
 function updateAuthContent() {
     const authContent = document.getElementById('auth-content');
-    const token = localStorage.getItem('auth_token');
+    const token = getCookie('auth_token');
     
     if (token) {
         // User is logged in
@@ -101,5 +101,17 @@ window.addEventListener('storage', function(e) {
         updateAuthContent();
     }
 });
+
+// Cookie utility function
+function getCookie(name) {
+    const nameEQ = name + "=";
+    const ca = document.cookie.split(';');
+    for(let i = 0; i < ca.length; i++) {
+        let c = ca[i];
+        while (c.charAt(0) == ' ') c = c.substring(1, c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
+    }
+    return null;
+}
 </script>
 {% endblock %} 
