--- a/infonomy_server/templates/question_detail.html
+++ b/infonomy_server/templates/question_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ question.query or "Question" }} - Information Market Platform{% endblock %}
+{% block title %}{{ question.query or "Question" }} - Infonomy{% endblock %}
 
 {% block content %}
 <div class="container">
