--- a/infonomy_server/templates/users.html
+++ b/infonomy_server/templates/users.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Users - Information Market Platform{% endblock %}
+{% block title %}Users - Infonomy{% endblock %}
 
 {% block content %}
 <div class="container">
