--- a/infonomy_server/templates/questions.html
+++ b/infonomy_server/templates/questions.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Questions - Information Market Platform{% endblock %}
+{% block title %}Questions - Infonomy{% endblock %}
 
 {% block content %}
 <div class="container">
