simplify profile/user page

--- a/infonomy_server/templates/base.html
+++ b/infonomy_server/templates/base.html
@@ -117,7 +117,7 @@
                     .then(user => {
                         // Check if user needs to complete profile
                         if (!user.buyer_profile || !user.seller_profile) {
-                            window.location.href = '/profile';
+                            window.location.href = `/users/${user.id}`;
                         } else {
                             window.location.reload();
                         }
